# gemini-api-project

./: .gitignore  Readme.Md  deployment.yaml  deploymentv2.yaml
ddosapp/: local.Dockerfile  local.docker-compose.yml  makefile  pyproject.toml  requirements.txt
ddosapp/scripts/: start-dev.sh
ddosapp/src/: main.py
gke-deployment/: .gitignore
gke-deployment/terraform/: backend.tf  main.tf  provider.tf  terraform-auto.tfvars  terraform.auto.tfvars  variable.tf  variables.tf
gke-deployment/terraform/Modules/gke-cluster/: main.tf  output.tf  variable.tf  variables.tf
gke-deployment/terraform/Modules/vpc-network/: firewall.tf  main.tf  nat-gateway.tf  output.tf  router.tf  variable.tf
